# textpipe

./: .coverage  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/actions/cache-cleanup/: action.yml
.github/actions/linting/: action.yml
.github/workflows/: linting.yml  publish.yml  testing.yml
data/tests/: comments.csv  comments.html  comments.json  comments.txt
docs/: modules.rst  textpipe.models.rst
docs/_build/doctrees/: index.doctree  textpipe.doctree  textpipe.pipeline.doctree
docs/_build/html/: .buildinfo.bak  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  textpipe.config.html  textpipe.html  textpipe.pipeline.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  textpipe.utils.rst.txt
docs/api/: textpipe.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/textpipe/: index.html
sphinx-docs/: conf.py  textpipe.data.rst  textpipe.rst
sphinx-docs/_build/doctrees/: environment.pickle  modules.doctree  textpipe.config.doctree  textpipe.data.doctree  textpipe.models.doctree  textpipe.utils.doctree
sphinx-docs/_build/html/: .buildinfo  genindex.html  modules.html  textpipe.data.html  textpipe.models.html  textpipe.utils.html
sphinx-docs/_build/html/_sources/: textpipe.config.rst.txt  (+1 more)
tests/config/: test_nltk.py
tests/data/: test_cleaner.py  test_loader.py  test_tokenizer.py  test_vectorizer.py
tests/models/: test_category_generator.py
tests/pipeline/: test_sentiment_pipeline.py  test_suggestion_pipeline.py
textpipe/: __init__.py
textpipe/config/: __init__.py  nltk.py
textpipe/data/: __init__.py  cleaner.py  loader.py  tokenizer.py  vectorizer.py
(+5 files in other folders)
