[project]
name = "Textpipe"
version = "0.1.1"
description = "All-in-one tool for text processing"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Textpipe Team", email = "codexesto@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
  "scikit-learn",
  "nltk",
  "sphinx",
  "pytest",
  "pandas",
  "bs4"
]
keywords = ["text processing", "text analysis", "natural language processing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English"
]
urls = { "Homepage" = "https://github.com/CodexEsto/textpipe" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
